Minor fixes, scrollbar, cards

--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  ::-webkit-scrollbar {
+    width: 12px;
+    height: 0;
+  }
+
+  ::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: #e5e7eb;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #9ca3af;
+    border-radius: 100vh;
+    border: 3px solid #e5e7eb;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #475569;
+  }
+}
